syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/samueltuoyo15/Order-Management-Service;orders";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetAllOrders(GetAllOrdersRequest) returns (GetAllOrdersResponse);
}

message Order {
    int32 order_id = 1;
    int32 customer_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    OrderStatus status = 7;
}

enum OrderStatus {
    ORDER_STATUS_UNSPECIFIED = 0;
    PENDING = 1;
    PROCESSING = 2;
    SHIPPED = 3;
    DELIVERED = 4;
    CANCELLED = 5;
}
message CreateOrderRequest {
    string trace_id = 1;
    int32 customer_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
}

message CreateOrderResponse {
    string status = 1;
    Order order = 2;
}

message GetAllOrdersRequest {
    int32 customer_id = 1;
}

message GetAllOrdersResponse {
    repeated Order orders = 1;
}

